--- a/node/package.json
+++ b/node/package.json
@@ -4,6 +4,7 @@
     "async": "^3.2.4",
     "es6-shim": "^0.35.6",
     "express": "^4.18.2",
+    "fft-js": "^0.0.12",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "odroid-gpio": "^0.0.2",
